# stpm2

./: CMakeLists.txt
examples/: create_primary.c  get_random.c  hash.c  openssl.c  rsa.c  rsa_keys.c
src/: stpm2.c  stpm2.h  stpm2_base64.c  stpm2_base64.h  stpm2_log.c  stpm2_log.h  tpm2_utils.h
src/imported/: tpm2_utils.h
src/imported/tpm2-tools/: tpm2_error.c
